--- a/catherine-ruf.html
+++ b/catherine-ruf.html
@@ -14,7 +14,7 @@
     color: #1a1a1a;
   }
 
-  /* HERO FIX */
+  /* HERO */
   .prospect-hero {
     display: flex;
     justify-content: space-between;
@@ -32,16 +32,6 @@
     flex: 1 1 60%;
     max-width: 70%;
     min-width: 260px;
-  }
-
-  .prospect-grade-card {
-    flex: 0 0 200px;
-    width: 200px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
   }
 
   .prospect-name {
@@ -64,21 +54,34 @@
     opacity: 0.9;
   }
 
+  .prospect-grade-card {
+    flex: 0 0 200px;
+    width: 200px;
+    padding: 0.75rem 1rem;
+    border-radius: 10px;
+    background: rgba(255,255,255,0.15);
+    border: 1px solid rgba(255,255,255,0.3);
+    backdrop-filter: blur(4px);
+  }
+
   .grade-label {
     font-size: 0.7rem;
     text-transform: uppercase;
     opacity: 0.8;
     margin-bottom: 0.25rem;
   }
+
   .grade-score {
     font-family: 'Archivo Black', sans-serif;
     font-size: 1.9rem;
     margin-bottom: 0.1rem;
   }
+
   .grade-tier {
     font-size: 0.8rem;
     font-weight: 600;
   }
+
   .grade-note {
     font-size: 0.75rem;
     opacity: 0.85;
@@ -162,22 +165,25 @@
 <body>
 <div class="prospect-page">
 
+  <!-- ==================== HERO ==================== -->
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">CATHERINE RUF</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Prospect · Player-Coach Leader · Investment Banking Track</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Player-Coach Personality · Democratic Leadership</p>
       <p class="prospect-subtitle">Columbia University · Rowing 🚣 · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">9.6</div>
+      <div class="grade-score">9.3</div>
       <div class="grade-tier">Round 1–2 Candidate</div>
-      <div class="grade-note">Disciplined, culture-defining, high-character operator</div>
+      <div class="grade-note">Reliable, composed, and consistently client-ready</div>
     </div>
   </section>
 
+  <!-- ==================== META ==================== -->
   <section class="prospect-meta">
+
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
@@ -193,51 +199,62 @@
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Fall Rank</span><span class="meta-value">4 / 63</span></li>
-        <li><span>GPA</span><span class="meta-value">3.5</span></li>
-        <li><span>Captain</span><span class="meta-value">Captain Contention</span></li>
-        <li><span>Personality</span><span class="meta-value">9. Player-Coach</span></li>
-        <li><span>Performance</span><span class="meta-value">High consistency · strong leadership wiring</span></li>
+        <li><span>Official Points</span><span class="meta-value">1380.5</span></li>
+        <li><span>Cumulative Rank</span><span class="meta-value">9 / 63</span></li>
+        <li><span>Phase 1 Rank</span><span class="meta-value">4 / 63</span></li>
+        <li><span>Phase 2 Rank</span><span class="meta-value">9 / 30</span></li>
+        <li><span>Personality</span><span class="meta-value">9. Player-Coach<br>(Structured · Dependable · Principles-Driven)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Democratic Leader<br>(Collaborative · Inclusive · Steady Decision-Maker)</span></li>
       </ul>
     </div>
+
   </section>
 
+  <!-- ==================== OVERVIEW ==================== -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Catherine is one of the most disciplined and high-character prospects in the Diamond League class. A true Player-Coach
-      operator, she brings a rare combination of maturity, composure, and leadership that elevates every team she touches.
-      Her profile demonstrates both strong academic fundamentals and meaningful leadership experience, with a track record
-      that positions her as an early standout for investment banking recruiting.
+      Catherine is one of the most steady, composed, and reliable prospects in the Diamond League class. She brings a classic
+      Player-Coach wiring — structured, principled, and team-first — with a consistent ability to produce polished, client-ready
+      work on the first attempt.  
+      <br><br>
+      Her rowing résumé reflects years of elite discipline, accountability, and resilience, and those same traits transfer directly
+      into her MAP performance, where she rarely misses deadlines, communicates proactively, and elevates the teams she works on.
+      Catherine profiles as a high-floor, high-trust early-summer IB candidate who will integrate seamlessly into structured,
+      process-driven environments.
     </p>
   </section>
 
+  <!-- ==================== STRENGTHS ==================== -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>High character & discipline:</strong> Reinforces culture and standards across every deliverable.</li>
-      <li><strong>Leadership wiring:</strong> Embodies the Player-Coach style — structured, principled, dependable.</li>
-      <li><strong>Strong communicator:</strong> Thoughtful, measured, confident under pressure.</li>
-      <li><strong>Academic readiness:</strong> Relevant coursework & demonstrated intellectual discipline.</li>
-      <li><strong>Team-first approach:</strong> Prioritizes team cohesion and sets a consistent example.</li>
+      <li><strong>Elite consistency:</strong> Always submits on time, follows instructions, and produces clean, polished deliverables.</li>
+      <li><strong>Player-Coach leadership:</strong> Sets tone through reliability, preparation, and quiet steadiness that teammates gravitate toward.</li>
+      <li><strong>Execution under structure:</strong> Thrives in clear frameworks and delivers high-quality, investor-ready output.</li>
+      <li><strong>Strong analytical foundation:</strong> Financial Economics major with meaningful exposure to valuation + company analysis.</li>
+      <li><strong>Proven competitive discipline:</strong> Henley champion & Youth Nationals medalist — elite athletic background that signals resilience and drive.</li>
+      <li><strong>Professional maturity:</strong> Private Equity + IB externship experience plus tangible project leadership across school and community roles.</li>
     </ul>
   </section>
 
+  <!-- ==================== AREAS FOR DEVELOPMENT ==================== -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue building technical fluency across valuation frameworks.</li>
-      <li>More early verbal assertiveness during team case work.</li>
-      <li>Practice adding sharper, more concise storytelling elements.</li>
+      <li>Continue deepening technical valuation reps to accelerate ramp-up toward analyst-level fluency.</li>
+      <li>Opportunities to speak earlier in group settings to amplify her voice and leadership presence.</li>
+      <li>Further refine storytelling by converting rich rowing + leadership experiences into sharp, interview-ready narratives.</li>
     </ul>
   </section>
 
+  <!-- ==================== PROJECTION ==================== -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A Round 1–2 MAP prospect with leadership traits firms actively seek. Catherine’s discipline, character, and
-      consistency give her a high floor, while her growing technical foundation positions her to become a culture-driver
-      inside any analyst program.
+      A Round 1–2 MAP prospect with a strong leadership floor and analyst-ready professionalism. Catherine projects as a culture-driver,
+      a stabilizing presence on any deal team, and a reliable early contributor who will stand out for her discipline, polish, and
+      consistency.
     </p>
   </section>
 
