--- a/catherine-ruf.html
+++ b/catherine-ruf.html
@@ -70,18 +70,15 @@
     opacity: 0.8;
     margin-bottom: 0.25rem;
   }
-
   .grade-score {
     font-family: 'Archivo Black', sans-serif;
     font-size: 1.9rem;
     margin-bottom: 0.1rem;
   }
-
   .grade-tier {
     font-size: 0.8rem;
     font-weight: 600;
   }
-
   .grade-note {
     font-size: 0.75rem;
     opacity: 0.85;
@@ -191,6 +188,7 @@
         <li><span>Major</span><span class="meta-value">Financial Economics</span></li>
         <li><span>Minor</span><span class="meta-value">N/A</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.5</span></li>
         <li><span>Sport</span><span class="meta-value">Rowing</span></li>
         <li><span>Hometown</span><span class="meta-value">Greenwich, CT</span></li>
       </ul>
@@ -261,3 +259,4 @@
 </div>
 </body>
 </html>
+
